<resources>
    <string name="app_name">Movie Application</string>
    <string name="title_activity_movie_navigation">MainActivity</string>
    <string name="title_home">Movies</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="todo">TODO</string>
    <string name="top_today">Top Today</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="actors">Actors</string>
    <string name="biography">Biography</string>
    <string name="birthday">birthday</string>
    <string name="_15_7">15.7</string>
    <string name="search_a_movie">Search a movie</string>
    <string name="title_actors">Actors</string>
    <string name="title_favourites">Favourites</string>
    <string name="top_20_actors">Top 20 Actors</string>
    <string name="incorrect_request">Incorrect Request</string>
    <string name="try_again">Try Again</string>
</resources>