<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottom_navigation.actors.DetailedActorsActivity">
    <include layout="@layout/toolbar_layout" />

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#29576D">

        <androidx.cardview.widget.CardView
            android:layout_gravity="center_vertical"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="70dp"
            app:cardElevation="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/actorImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_marginStart="60dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLines="2"/>
            <TextView
                android:id="@+id/birthdayTextView"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/birthday"
                android:textAlignment="center"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/actorPopularity"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/_15_7"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
</FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/biography"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/biographyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>