<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".bottom_navigation.ui.home.HomeFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:paddingStart="12sp"
                tools:ignore="RtlSymmetry">


                <TextView

                    android:id="@+id/text_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/top_today"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />


                <ImageView

                    android:id="@+id/AllTopTodayButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:src="@mipmap/baseline_arrow_forward_black_24"
                    android:paddingEnd="20sp"
                    android:layout_gravity="end"
                    android:textColor="@android:color/darker_gray"
                    android:contentDescription="@string/todo" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topTodayRecyclerView"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12sp"
                tools:ignore="RtlSymmetry">


                <TextView

                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/popular"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView

                    android:id="@+id/AllPopularButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:src="@mipmap/baseline_arrow_forward_black_24"
                    android:paddingEnd="20sp"
                    android:layout_gravity="end"
                    android:textColor="@android:color/darker_gray"
                    android:contentDescription="@string/todo" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecyclerView"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12sp"
                tools:ignore="RtlSymmetry">


                <TextView

                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/top_rated"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView

                    android:id="@+id/AllTopRatedButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:src="@mipmap/baseline_arrow_forward_black_24"
                    android:paddingEnd="20sp"
                    android:layout_gravity="end"
                    android:textColor="@android:color/darker_gray"
                    android:contentDescription="@string/todo" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12sp"
                tools:ignore="RtlSymmetry">


                <TextView

                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12sp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/upcoming"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView

                    android:id="@+id/AllUpComingButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:src="@mipmap/baseline_arrow_forward_black_24"
                    android:paddingEnd="20sp"
                    android:layout_gravity="end"
                    android:textColor="@android:color/darker_gray"
                    android:contentDescription="@string/todo" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/upcomingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>