<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".detailed_movie_view.DetailedMovieActivity">
    <include layout="@layout/toolbar_layout" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <FrameLayout
        android:background="@drawable/image_overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:background="@drawable/image_overlay"
            android:id="@+id/detailedBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addToFavourites"
            android:src="@mipmap/round_favorite_border_black_36"
            android:layout_gravity="end"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="80dp">
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/moviesDetailedImageViewID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />
                    <TextView
                        android:fontFamily="@font/light_font"
                        android:id="@+id/ratingTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/popular"
                        android:textColor="@color/white"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        <TextView
            android:fontFamily="@font/bold_font"
            android:id="@+id/titleTV"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textSize="24sp" />



            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="240dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semi_bold_font"
                    android:textSize="16sp"
                    android:id="@+id/genreTVID"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bold_font"
                    android:text="@string/overview"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
                <TextView
                    android:fontFamily="@font/regular_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/titleDetailedTextViewID" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/castRecyclerView"/>
                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:padding="20dp"
                    android:layout_margin="20dp"
                    android:id="@+id/youtube_player_view"
                    android:layout_width="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="200dp"
                    app:videoId=""
                    app:autoPlay="false"
                    app:showFullScreenButton="false" />
            </LinearLayout>
    </FrameLayout>
</ScrollView>
</LinearLayout>